Refine AED filtering, fix navigation URL, and update AED UI fields

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,44 +1,21 @@
 {
-  "name": "SOS-NOW - 응급 의료 정보",
-  "short_name": "SOS-NOW",
-  "description": "실시간 응급실, 약국, AED 위치 찾기",
+  "name": "SOS NOW",
+  "short_name": "SOS NOW",
+  "description": "Emergency Medical Map Service",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0F172A",
-  "theme_color": "#EF4444",
-  "orientation": "portrait",
+  "background_color": "#ffffff",
+  "theme_color": "#ef4444",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/apple-touch-icon.png",
-      "sizes": "180x180",
       "type": "image/png"
-    }
-  ],
-  "categories": ["medical", "health", "lifestyle"],
-  "screenshots": [
-    {
-      "src": "/screenshot-wide.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
     },
     {
-      "src": "/screenshot-narrow.png",
-      "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow"
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
