--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@supabase/supabase-js": "^2.90.1",
     "fast-xml-parser": "^5.3.3",
+    "iconv-lite": "^0.7.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "papaparse": "^5.5.3",
+    "proj4": "^2.20.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-naver-maps": "^0.1.4",
@@ -21,6 +25,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.2",
+    "@types/proj4": "^2.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
